fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  background-color: rgb(218, 224, 230);
+  /*padding-bottom: 1px;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
